# whiteCalculator

./: .sh  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: blank-issues.md
INFO/: QuickStart.md
dev/: package-lock.json  package.json
dev/docs/: readme.md
dev/docs/.vuepress/: config.js
dev/docs/docs/: Calculator.md  Formula.md  Others.md  readme.md
dev/docs/guide/: Installation.md  Introduction.md  QuickStart.md  readme.md
docs/: 404.html  index.html
docs/DOCS/: Calculator.html
docs/GUIDE/: Installation.html  QuickStart.html
docs/article/: index.html
docs/assets/css/: styles.42357b72.css
docs/assets/js/: 293.eda42418.js  30.fcf3b1db.js  567.d4ab2199.js  app.9c3c458c.js  layout-NotFound.fe594bdf.js  page--013ac591.385a0b39.js  page--0da6c23a.461cf0b4.js  page--0da6c23a.6beab667.js  page--88279f8c.f6174b6f.js  page--9611d81e.ab1b9dbc.js  page--de0d8c38.0c6e0060.js  page--fb3087c4.58e90359.js  page-Calculator.aa156199.js  page-Guide.c60609fa.js  page-Guide.d6f80460.js  page-QuickStarted.6be7bab9.js  runtime~app.a246b72f.js  v-98a1955a.0602d2ff.js  vendors~layout-Blog~layout-Layout~layout-NotFound~layout-Slide.fd9b9e80.js  vendors~layout-Layout.8b255f02.js  vendors~photo-swipe.f76f636d.js
docs/docs/: index.html
docs/docs/Formula/: index.html
docs/docs/Others/: index.html
docs/guide/: index.html
docs/guide/Installation/: index.html
docs/guide/Introduction/: index.html
docs/slide/: index.html
docs/star/: index.html
docs/timeline/: index.html
docs/zh/: index.html
docs/zh/guide/: index.html
docs/zh/home/: index.html
src/calculator/: __init__.py  calculator.py  maths.py
src/calculator_pkg_WHITENIGHT.egg-info/: PKG-INFO  SOURCES.txt
src/whiteCalculator/: ERRORS.py  Formula.py  __init__.py  calculator.py  maths.py  timeout.py
src/whiteCalculator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/white_calculator/: __init__.py  calculator.py
tests/: main.py  test.py  testFix.py
vuepress/: .sh  package-lock.json  package.json
vuepress-starter/: package-lock.json  package.json
vuepress-starter/docs/: README.md
vuepress/docs/: README.md
(+11 files in other folders)
