[metadata]
name = calculator-pkg-WHITENIGHT
version = 0.0.1
author = White Night
author_email = evan.tang.2021@gmail.com
description = A small calculator api for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WhiteNightAWA/calculator-api
project_urls =
    Bug Tracker = https://github.com/WhiteNightAWA/calculator-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src