[metadata]
name = whiteCalculator
version = 0.0.7
author = WhiteNight
author_email = evan.tang.2021@gmail.com
description = A small calculator module for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WhiteNightAWA/whiteCalculator
project_urls =
    Home Page = https://whitenightawa.github.io/whiteCalculator/
    Bug Tracker = https://github.com/WhiteNightAWA/whiteCalculator/issues
    Documentation = https://whitenightawa.github.io/whiteCalculator/DOCS/
    Funding = https://www.buymeacoffee.com/WhiteNightAWA
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
license = MIT License


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src